--- a/stringprep.cabal
+++ b/stringprep.cabal
@@ -12,6 +12,11 @@ Category: data
 extra-source-files: Text/*.hs
 
 Library
- Build-Depends: base>=3 && < 5, containers>=0.2, ranges>=0.2.2, stream-fusion>=0.1.2.1, text-icu>=0.6, text>=0.9
+ Build-Depends: base          >=3 &&    < 5
+              , containers    >=0.2
+              , ranges        >=0.2.2
+              , stream-fusion >=0.1.2.1
+              , text-icu      >=0.6
+              , text          >=0.9
  Exposed-modules: Text.StringPrep, Text.NamePrep
- ghc-options: -O2 -Wall
+ ghc-options: -O -Wall -fno-warn-name-shadowing
