--- a/stringprep.cabal
+++ b/stringprep.cabal
@@ -6,7 +6,7 @@ License: BSD3
 Author: George Pollard <porges@porg.es>
 Maintainer: George Pollard <porges@porg.es>
 Build-Type: Simple
-Cabal-Version: >=1.6
+Cabal-Version: >=1.8
 License-file: LICENSE
 Category: data
 extra-source-files: Text/*.hs
@@ -21,3 +21,17 @@ Library
                 , Text.SaslPrep
  Other-modules:   Text.CharRanges
  ghc-options: -O2 -Wall -fno-warn-name-shadowing
+
+test-suite tests
+ Build-Depends: base
+              , QuickCheck
+              , containers
+              , text
+              , text-icu
+              , tasty
+              , tasty-quickcheck
+              , tasty-th
+ type:         exitcode-stdio-1.0
+ main-is:     Tests.hs
+ Other-modules: Ranges
+ hs-source-dirs: tests .
